--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -15,14 +15,14 @@
   --vt-c-text-light-2: rgb(60 60 60 / 66%);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgb(235 235 235 / 64%);
-  --color-background: var(--vt-c-white-seasalt);
+  --color-background: var(--c-white-vt-seasalt);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
   --color-border: var(--vt-c-divider-light-2);
   --color-border-hover: var(--vt-c-divider-light-1);
   --color-heading: var(--vt-c-text-light-1);
   --color-text: var(--vt-c-text-light-1);
-  --section-gap: 160px;
+  --title-bar-height: env(titlebar-area-height, 32px);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -33,7 +33,7 @@
     --color-border: var(--vt-c-divider-dark-2);
     --color-border-hover: var(--vt-c-divider-dark-1);
     --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
+    --color-text: var(--c-white);
   }
 }
 
@@ -68,13 +68,19 @@ html {
 }
 
 html,
-body,
+body {
+  width: 100vw;
+  height: 100h;
+  background-color: var(--color-background);
+}
+
 #app {
+  width: 100vw;
+  min-width: 80vw;
+  max-width: 100vw;
+  height: 100vh;
+  min-height: 100vh;
+  max-height: 100vh;
+  background-color: var(--color-background);
   overflow: hidden;
-  width: 100dvw;
-  min-width: 100dvw;
-  max-width: 100dvw;
-  height: 100dvh;
-  min-height: 100dvh;
-  max-height: 100dvh;
 }
