--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1,4 +1,19 @@
 @import url("./base.css");
+@import url("./trackProgress.css");
+
+main {
+  padding-top: var(--title-bar-height);
+}
+
+@media (max-height: 154px) {
+  .menu {
+    display: none;
+  }
+
+  .view {
+    display: none;
+  }
+}
 
 main.not-fullscreen {
   display: grid;
@@ -8,7 +23,7 @@ main.not-fullscreen {
     "a b"
     "c c";
   grid-template-columns: minmax(10rem, 30rem) 1fr;
-  grid-template-rows: 1fr 6.5rem;
+  grid-template-rows: 1fr 120px;
 }
 
 .menu {
@@ -45,9 +60,9 @@ input {
   left: env(titlebar-area-x, 0);
   display: flex;
   width: env(titlebar-area-width, 100%);
-  height: 32px;
-  min-height: 32px;
-  max-height: 32px;
+  height: var(--title-bar-height);
+  min-height: var(--title-bar-height);
+  max-height: var(--title-bar-height);
   -webkit-app-region: drag;
   background-color: var(--color-background);
   font-weight: bold;
