--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1,11 +1,12 @@
+@import "@master/normal.css";
 @import url("./base.css");
 @import url("./trackProgress.css");
 
-main {
-  padding-top: var(--title-bar-height);
+.view {
+  max-height: 80dvh;
 }
 
-@media (max-height: 154px) {
+@media (max-height: 184px) {
   .menu {
     display: none;
   }
@@ -13,36 +14,6 @@ main {
   .view {
     display: none;
   }
-}
-
-main.not-fullscreen {
-  display: grid;
-  width: 100%;
-  height: 100%;
-  grid-template:
-    "a b"
-    "c c";
-  grid-template-columns: minmax(10rem, 30rem) 1fr;
-  grid-template-rows: 1fr 152px;
-}
-
-.menu {
-  grid-area: a;
-}
-
-.view {
-  grid-area: b;
-}
-
-.player {
-  grid-area: c;
-}
-
-main.fullscreen {
-  display: grid;
-  width: 100%;
-  height: 100%;
-  grid-template-rows: 1fr 6.5rem;
 }
 
 input {
@@ -54,25 +25,12 @@ input {
   text-align: center;
 }
 
-.title-bar {
-  position: absolute;
-  top: 0;
-  left: env(titlebar-area-x, 0);
-  display: flex;
-  width: env(titlebar-area-width, 100%);
-  height: var(--title-bar-height);
-  min-height: var(--title-bar-height);
-  max-height: var(--title-bar-height);
-  -webkit-app-region: drag;
-  background-color: var(--color-background);
-  font-weight: bold;
-  text-align: center;
-  -webkit-user-select: none;
-  user-select: none;
-}
-
 .setting {
   display: flex;
   padding: 1rem;
   background-color: #fdfdfd;
+}
+
+.title-bar-drag-region {
+  -webkit-app-region: drag;
 }
