--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -3,9 +3,7 @@
   --c-white: #fff;
   --c-white-vt-seasalt: #f9f9f9;
   --c-black-vt-jet: #222;
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222;
-  --vt-c-black-mute: #282828;
+  --c-black-vt-eerie-black: #1f1f1f;
   --vt-c-indigo: #2c3e50;
   --vt-c-divider-light-1: rgb(60 60 60 / 29%);
   --vt-c-divider-light-2: rgb(60 60 60 / 12%);
@@ -22,8 +20,10 @@
   --color-border-hover: var(--vt-c-divider-light-1);
   --color-heading: var(--vt-c-text-light-1);
   --color-text: var(--vt-c-text-light-1);
-  --title-bar-height: env(titlebar-area-height, 32px);
 
+  --color-playback-control-slider-background: var(--c-white);
+  --color-ui-player-controls-fill: var(--c-white-vt-seasalt);
+  --title-bar-height: env(titlebar-area-height, 32px);
   --title-bar-left: env(titlebar-area-x, 0);
   --title-bar-width: env(titlebar-area-width, 100%);
 
@@ -32,13 +32,17 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--c-black-vt-jet);
-    --color-background-soft: var(--vt-c-black-soft);
+    --color-background: var(--c-black-vt-eerie-black);
+    --color-background-soft: var(--c-black-vt-jet);
     --color-background-mute: var(--vt-c-black-mute);
     --color-border: var(--vt-c-divider-dark-2);
     --color-border-hover: var(--vt-c-divider-dark-1);
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--c-white);
+    --color-playback-control-slider-background: var(--c-white-vt-seasalt);
+    --color-player-controls-fill: var(--c-white-vt-seasalt);
+    --color-ui-background: rgba(255, 255, 255, 0.027);
+    --color-ui-background-hover: rgba(255, 255, 255, 0.054);
   }
 }
 
@@ -85,14 +89,4 @@ body {
   background-color: var(--color-background);
   overflow: hidden;
   color: var(--color-text);
-}
-
-#app {
-  width: 100vw;
-  min-width: 80vw;
-  max-width: 100vw;
-  height: 100vh;
-  min-height: 100vh;
-  max-height: 100vh;
-  background-color: var(--color-background);
 }
